# nnuNet_cpp

./: .$深度学习算法推理代码流程图_2025-07-15.drawio.dtmp  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  debug_fixes_summary.md  hardcoded_parameters_analysis.md  深度学习算法推理代码流程图_2025-07-15.drawio
header/: DentalCbctSegAI_API.h  UnetSegAI_API.h  onnxruntime_cxx_api.h
param/: 116.json  checkpoint_best_params.json  current_hardcoded_params.json  knee.json
ref/: plans.json
ref/env_test/: CMakeLists.txt  env_log.txt  main.cpp
ref/log/: log.txt
ref/torch_deploy/: DentalCbctSegAI_API.cpp  DentalCbctSegAI_API.h  DentalUnet.cpp  DentalUnet.h  DentalUnet_cimg_version.cpp  DentalUnet_cimg_version.h
scripts/: README.md  compare_results.py  convert_all_results.bat  convert_and_compare.py  convert_raw_to_npy.py  simple_compare_results.py  visualize_results.py
src/: testToothSegmentation.cpp
static/: CLAUDE.md  CMakeLists.txt  LIBTORCH_INTEGRATION_PLAN.md  build.bat
static/header/: ConfigParser.h  DentalCbctSegAI_API.h  DentalUnet.h  UnetIO.h  UnetInference.h  UnetMain.h  UnetPostprocessor.h  UnetPreprocessor.h  UnetSegAI_API.h  UnetTorchInference.h  framework.h
static/include/: SystemMonitor.h
static/src/: ConfigParser.cpp  DentalCbctSegAI_API.cpp  DentalUnet.cpp  DentalUnet.h  UnetIO.cpp  UnetInference.cpp  UnetMain.cpp  UnetPostprocessor.cpp  UnetPreprocessor.cpp  UnetSegAI_API.cpp  UnetTorchInference.cpp  dllmain.cpp  pch.cpp
